added polars load on criteo

--- a/notebooks/amazon_reviews/amazon_reviews_read.ipynb
+++ b/notebooks/amazon_reviews/amazon_reviews_read.ipynb
@@ -194,7 +194,9 @@
     "review_file_path='Automotive.jsonl'\n",
     "\n",
     "review_df = pd.read_json(review_file_path)\n",
-    "\n"
+    "\n",
+    "print(review_df.head())\n",
+    "print(review_df.info())\n"
    ]
   },
   {
