--- a/notebooks/criteo_advertising/criteo_analysis.ipynb
+++ b/notebooks/criteo_advertising/criteo_analysis.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Criteo"
+    "# Criteo\n",
+    "\n",
+    "https://www.kaggle.com/competitions/criteo-display-ad-challenge/data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +36,19 @@
    "outputs": [],
    "source": [
     "df=pd.read_csv(filepath, sep='\\t', header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the column names\n",
+    "column_names = ['Label'] + [f'I{i}' for i in range(1, 14)] + [f'C{i}' for i in range(1, 27)]\n",
+    "\n",
+    "# Assigning column names to the DataFrame\n",
+    "df.columns = column_names"
    ]
   },
   {
@@ -94,6 +109,33 @@
    ],
    "source": [
     "df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# polar load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "\n",
+    "column_names = ['Label'] + [f'I{i}' for i in range(1, 14)] + [f'C{i}' for i in range(1, 27)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_polars = pl.read_csv(filepath, new_columns=column_names)\n"
    ]
   }
  ],
