updated descriptions on notebooks

--- a/notebooks/amazon_reviews/amazon_reviews_read.ipynb
+++ b/notebooks/amazon_reviews/amazon_reviews_read.ipynb
@@ -200,6 +200,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To analyze\n",
+    "- extract item meta descriptions (probably regex)\n",
+    "- try to focus on one category depending on variable number and record size. interesting examples: Automotive and Beauty Products"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
