--- a/notebooks/ecommerce_behaviour/ecommerce_analysis.ipynb
+++ b/notebooks/ecommerce_behaviour/ecommerce_analysis.ipynb
@@ -375,6 +375,20 @@
    "source": [
     "print(df['brand'].value_counts())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To analyze further\n",
+    "\n",
+    "- analyze revenue of products to understand business contribute. is a cheaper product better than a pricier one? depends on transaction volume vs average revenue per user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
