--- a/notebooks/criteo_advertising/criteo_analysis.ipynb
+++ b/notebooks/criteo_advertising/criteo_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "\n",
     "compressed_link='https://go.criteo.net/criteo-research-kaggle-display-advertising-challenge-dataset.tar.gz'\n",
     "\n",
-    "filepath='train.txt'\n"
+    "filepath='test.txt'\n"
    ]
   },
   {
@@ -53,56 +53,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0            2\n",
-       "1          648\n",
-       "2         9364\n",
-       "3        14745\n",
-       "4          489\n",
-       "5       476706\n",
-       "6        11617\n",
-       "7         4141\n",
-       "8         1372\n",
-       "9         7274\n",
-       "10          12\n",
-       "11         168\n",
-       "12         406\n",
-       "13        1375\n",
-       "14        1460\n",
-       "15         583\n",
-       "16    10131226\n",
-       "17     2202607\n",
-       "18         305\n",
-       "19          23\n",
-       "20       12517\n",
-       "21         633\n",
-       "22           3\n",
-       "23       93145\n",
-       "24        5683\n",
-       "25     8351592\n",
-       "26        3194\n",
-       "27          27\n",
-       "28       14992\n",
-       "29     5461305\n",
-       "30          10\n",
-       "31        5652\n",
-       "32        2172\n",
-       "33           3\n",
-       "34     7046546\n",
-       "35          17\n",
-       "36          15\n",
-       "37      286180\n",
-       "38         104\n",
-       "39      142571\n",
+       "0         415\n",
+       "1        6159\n",
+       "2        5037\n",
+       "3         215\n",
+       "4      197664\n",
+       "5        6422\n",
+       "6        2550\n",
+       "7         570\n",
+       "8        4828\n",
+       "9           9\n",
+       "10        146\n",
+       "11        267\n",
+       "12        507\n",
+       "13       1351\n",
+       "14        554\n",
+       "15    1654603\n",
+       "16     496951\n",
+       "17        280\n",
+       "18         22\n",
+       "19      11815\n",
+       "20        596\n",
+       "21          3\n",
+       "22      55575\n",
+       "23       4852\n",
+       "24    1426968\n",
+       "25       3129\n",
+       "26         27\n",
+       "27      12147\n",
+       "28    1029667\n",
+       "29         10\n",
+       "30       4866\n",
+       "31       2076\n",
+       "32          3\n",
+       "33    1254818\n",
+       "34         17\n",
+       "35         14\n",
+       "36     107745\n",
+       "37         89\n",
+       "38      69135\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
