--- a/notebooks/Francis tests_python/sales_csv_analysis.ipynb
+++ b/notebooks/Francis tests_python/sales_csv_analysis.ipynb
@@ -553,7 +553,7 @@
     "plt.xticks(x, company, rotation=45)\n",
     "\n",
     "# Mostra o gráfico\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
