test_francis_pull_request
test_francis_pull_request

--- a/notebooks/Francis tests_python/python book_examples.ipynb
+++ b/notebooks/Francis tests_python/python book_examples.ipynb
@@ -60,6 +60,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = round(1.5)\n",
+    "\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
