francis_data_pre_process_2024_09_25
francis_data_pre_process_2024_09_25

--- a/notebooks/ecommerce_behaviour/ecommerce_analysis.ipynb
+++ b/notebooks/ecommerce_behaviour/ecommerce_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,225 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>event_time</th>\n",
-       "      <th>event_type</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>category_id</th>\n",
-       "      <th>category_code</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>price</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>user_session</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-04-01 00:00:00 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>1201465</td>\n",
-       "      <td>2232732101407408685</td>\n",
-       "      <td>apparel.shoes.slipons</td>\n",
-       "      <td>samsung</td>\n",
-       "      <td>230.38</td>\n",
-       "      <td>568984877</td>\n",
-       "      <td>e2456cef-2d4f-42b9-a53a-8893cb0c6851</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-04-01 00:00:01 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>1307156</td>\n",
-       "      <td>2053013554658804075</td>\n",
-       "      <td>electronics.audio.headphone</td>\n",
-       "      <td>apple</td>\n",
-       "      <td>1352.67</td>\n",
-       "      <td>514955500</td>\n",
-       "      <td>38f43134-de83-4710-ae0a-326677d292c6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-04-01 00:00:01 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>1480477</td>\n",
-       "      <td>2053013563835941749</td>\n",
-       "      <td>appliances.kitchen.refrigerators</td>\n",
-       "      <td>apple</td>\n",
-       "      <td>1184.05</td>\n",
-       "      <td>633645770</td>\n",
-       "      <td>16aba270-b3c2-4b23-be0a-b7c80bc9da9e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-04-01 00:00:02 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>1307050</td>\n",
-       "      <td>2053013554658804075</td>\n",
-       "      <td>electronics.audio.headphone</td>\n",
-       "      <td>apple</td>\n",
-       "      <td>1724.34</td>\n",
-       "      <td>564933778</td>\n",
-       "      <td>05b443bd-e68a-4d72-b971-80bd31109cb8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-04-01 00:00:03 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>9500109</td>\n",
-       "      <td>2232732104175649385</td>\n",
-       "      <td>apparel.scarf</td>\n",
-       "      <td>defender</td>\n",
-       "      <td>25.05</td>\n",
-       "      <td>530206135</td>\n",
-       "      <td>e3c1fb4b-0a7e-457d-a0cf-5d1479e9aafc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66589263</th>\n",
-       "      <td>2020-04-30 23:59:59 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>1003319</td>\n",
-       "      <td>2232732093077520756</td>\n",
-       "      <td>construction.tools.light</td>\n",
-       "      <td>apple</td>\n",
-       "      <td>900.90</td>\n",
-       "      <td>648021639</td>\n",
-       "      <td>b30b4657-011a-42bb-a57b-300b0030ef50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66589264</th>\n",
-       "      <td>2020-04-30 23:59:59 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>1005141</td>\n",
-       "      <td>2232732093077520756</td>\n",
-       "      <td>construction.tools.light</td>\n",
-       "      <td>apple</td>\n",
-       "      <td>1599.78</td>\n",
-       "      <td>649775363</td>\n",
-       "      <td>a1f49d5b-714f-4e38-b66a-d1679d4d2a1c</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66589265</th>\n",
-       "      <td>2020-04-30 23:59:59 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>100205454</td>\n",
-       "      <td>2232732085041234105</td>\n",
-       "      <td>apparel.shirt</td>\n",
-       "      <td>defacto</td>\n",
-       "      <td>12.84</td>\n",
-       "      <td>639250275</td>\n",
-       "      <td>8b9ae17d-c0c1-4bad-aa20-9b541c8be405</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66589266</th>\n",
-       "      <td>2020-04-30 23:59:59 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>12200824</td>\n",
-       "      <td>2053013553325015316</td>\n",
-       "      <td>appliances.kitchen.toster</td>\n",
-       "      <td>cube</td>\n",
-       "      <td>1956.03</td>\n",
-       "      <td>522762529</td>\n",
-       "      <td>d272f36d-f20b-4540-ac35-9b779acc4dd7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66589267</th>\n",
-       "      <td>2020-04-30 23:59:59 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>1004342</td>\n",
-       "      <td>2232732093077520756</td>\n",
-       "      <td>construction.tools.light</td>\n",
-       "      <td>meizu</td>\n",
-       "      <td>228.83</td>\n",
-       "      <td>530264277</td>\n",
-       "      <td>1fb383a0-01f9-4219-93e7-836e70e3bce1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>66589268 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       event_time event_type  product_id          category_id  \\\n",
-       "0         2020-04-01 00:00:00 UTC       view     1201465  2232732101407408685   \n",
-       "1         2020-04-01 00:00:01 UTC       view     1307156  2053013554658804075   \n",
-       "2         2020-04-01 00:00:01 UTC       view     1480477  2053013563835941749   \n",
-       "3         2020-04-01 00:00:02 UTC       view     1307050  2053013554658804075   \n",
-       "4         2020-04-01 00:00:03 UTC       view     9500109  2232732104175649385   \n",
-       "...                           ...        ...         ...                  ...   \n",
-       "66589263  2020-04-30 23:59:59 UTC       view     1003319  2232732093077520756   \n",
-       "66589264  2020-04-30 23:59:59 UTC       view     1005141  2232732093077520756   \n",
-       "66589265  2020-04-30 23:59:59 UTC       view   100205454  2232732085041234105   \n",
-       "66589266  2020-04-30 23:59:59 UTC       view    12200824  2053013553325015316   \n",
-       "66589267  2020-04-30 23:59:59 UTC       view     1004342  2232732093077520756   \n",
-       "\n",
-       "                             category_code     brand    price    user_id  \\\n",
-       "0                    apparel.shoes.slipons   samsung   230.38  568984877   \n",
-       "1              electronics.audio.headphone     apple  1352.67  514955500   \n",
-       "2         appliances.kitchen.refrigerators     apple  1184.05  633645770   \n",
-       "3              electronics.audio.headphone     apple  1724.34  564933778   \n",
-       "4                            apparel.scarf  defender    25.05  530206135   \n",
-       "...                                    ...       ...      ...        ...   \n",
-       "66589263          construction.tools.light     apple   900.90  648021639   \n",
-       "66589264          construction.tools.light     apple  1599.78  649775363   \n",
-       "66589265                     apparel.shirt   defacto    12.84  639250275   \n",
-       "66589266         appliances.kitchen.toster      cube  1956.03  522762529   \n",
-       "66589267          construction.tools.light     meizu   228.83  530264277   \n",
-       "\n",
-       "                                  user_session  \n",
-       "0         e2456cef-2d4f-42b9-a53a-8893cb0c6851  \n",
-       "1         38f43134-de83-4710-ae0a-326677d292c6  \n",
-       "2         16aba270-b3c2-4b23-be0a-b7c80bc9da9e  \n",
-       "3         05b443bd-e68a-4d72-b971-80bd31109cb8  \n",
-       "4         e3c1fb4b-0a7e-457d-a0cf-5d1479e9aafc  \n",
-       "...                                        ...  \n",
-       "66589263  b30b4657-011a-42bb-a57b-300b0030ef50  \n",
-       "66589264  a1f49d5b-714f-4e38-b66a-d1679d4d2a1c  \n",
-       "66589265  8b9ae17d-c0c1-4bad-aa20-9b541c8be405  \n",
-       "66589266  d272f36d-f20b-4540-ac35-9b779acc4dd7  \n",
-       "66589267  1fb383a0-01f9-4219-93e7-836e70e3bce1  \n",
-       "\n",
-       "[66589268 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '2020-Apr.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mread_csv(filepath)\n\u001b[1;32m      3\u001b[0m df\u001b[38;5;241m.\u001b[39mhead()\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/io/parsers/readers.py:1026\u001b[0m, in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[1;32m   1013\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[1;32m   1014\u001b[0m     dialect,\n\u001b[1;32m   1015\u001b[0m     delimiter,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1022\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[1;32m   1023\u001b[0m )\n\u001b[1;32m   1024\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[0;32m-> 1026\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/io/parsers/readers.py:620\u001b[0m, in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    617\u001b[0m _validate_names(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[1;32m    619\u001b[0m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[0;32m--> 620\u001b[0m parser \u001b[38;5;241m=\u001b[39m TextFileReader(filepath_or_buffer, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[1;32m    622\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[1;32m    623\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/io/parsers/readers.py:1620\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m   1617\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m   1619\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles: IOHandles \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 1620\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_make_engine(f, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mengine)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/io/parsers/readers.py:1880\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1878\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode:\n\u001b[1;32m   1879\u001b[0m         mode \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 1880\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;241m=\u001b[39m get_handle(\n\u001b[1;32m   1881\u001b[0m     f,\n\u001b[1;32m   1882\u001b[0m     mode,\n\u001b[1;32m   1883\u001b[0m     encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[1;32m   1884\u001b[0m     compression\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcompression\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[1;32m   1885\u001b[0m     memory_map\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmemory_map\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m),\n\u001b[1;32m   1886\u001b[0m     is_text\u001b[38;5;241m=\u001b[39mis_text,\n\u001b[1;32m   1887\u001b[0m     errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding_errors\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstrict\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[1;32m   1888\u001b[0m     storage_options\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstorage_options\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[1;32m   1889\u001b[0m )\n\u001b[1;32m   1890\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1891\u001b[0m f \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles\u001b[38;5;241m.\u001b[39mhandle\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/io/common.py:873\u001b[0m, in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    868\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(handle, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    869\u001b[0m     \u001b[38;5;66;03m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[1;32m    870\u001b[0m     \u001b[38;5;66;03m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[1;32m    871\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mencoding \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mmode:\n\u001b[1;32m    872\u001b[0m         \u001b[38;5;66;03m# Encoding\u001b[39;00m\n\u001b[0;32m--> 873\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\n\u001b[1;32m    874\u001b[0m             handle,\n\u001b[1;32m    875\u001b[0m             ioargs\u001b[38;5;241m.\u001b[39mmode,\n\u001b[1;32m    876\u001b[0m             encoding\u001b[38;5;241m=\u001b[39mioargs\u001b[38;5;241m.\u001b[39mencoding,\n\u001b[1;32m    877\u001b[0m             errors\u001b[38;5;241m=\u001b[39merrors,\n\u001b[1;32m    878\u001b[0m             newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    879\u001b[0m         )\n\u001b[1;32m    880\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    881\u001b[0m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[1;32m    882\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(handle, ioargs\u001b[38;5;241m.\u001b[39mmode)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '2020-Apr.csv'"
+     ]
     }
    ],
    "source": [
@@ -407,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
