ga4 merch pre processing: pages, device, geo, traffic source

--- a/notebooks/google_merch_store/ga4_merch_store_data_profiling.ipynb
+++ b/notebooks/google_merch_store/ga4_merch_store_data_profiling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -262,13 +262,34 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data=pd.read_csv(filepath)\n",
+    "test_data=True\n",
+    "# test_data=False\n",
+    "\n",
+    "if test_data==True:\n",
+    "    # Specify the chunk size (e.g., load 1000 lines at a time)\n",
+    "    chunk_size = 50000\n",
+    "\n",
+    "    # Initialize an empty list to store the chunks\n",
+    "    chunks = []\n",
+    "\n",
+    "    # Load the first chunk (or any number of chunks you want)\n",
+    "    for chunk in pd.read_csv(filepath, chunksize=chunk_size):\n",
+    "        chunks.append(chunk)\n",
+    "        # Break after the first chunk to load only a sample\n",
+    "        break\n",
+    "\n",
+    "    # Concatenate the chunks into a single DataFrame (optional)\n",
+    "    data = pd.concat(chunks)\n",
+    "\n",
+    "else:\n",
+    "    data=pd.read_csv(filepath)\n",
+    "\n",
     "\n",
     "data.head()"
    ]
@@ -1367,7 +1388,10 @@
     "- geo metro - all \"not set\"\n",
     "- geo city - very high share of null values\n",
     "- id ad limited - all \"No\"\n",
-    "- device monile marketing name - all \"not set\"\n",
+    "- device mobile marketing name - all \"not set\"\n",
+    "- device is limited ad tracking - all \"no\"\n",
+    "- traffic_source_name - duplicate from traffic source medium\n",
+    "- page_referrer\n",
     "- Does it make sense to keep \"promotion name\" since it has a high share of null values and its only related to a specific event? maybe persist the last value for the session\n",
     "\n",
     "2. Device encoding\n",
