corrected data preprocessing and profiling

--- a/notebooks/google_merch_store/archive/ga4_merch_preprocessing_old.ipynb
+++ b/notebooks/google_merch_store/archive/ga4_merch_preprocessing_old.ipynb
@@ -278,7 +278,6 @@
     "# Create new columns\n",
     "data['hour_of_day'] = data['event_timestamp'].dt.hour  # Extract hour (0-23)\n",
     "data['minute'] = data['event_timestamp'].dt.minute  # Extract minute\n",
-    "data['second'] = data['event_timestamp'].dt.second  # Extract second\n",
     "data['hour_minute_fraction'] = data['hour_of_day'] + data['minute'] / 60  # Hour + fraction of minute\n",
     "\n",
     "# Categorize the time of day\n",
@@ -885,7 +884,7 @@
    "source": [
     "data.replace('(not set)', np.nan, inplace=True)\n",
     "\n",
-    "data.replace('<Other>', np.nan, inplace=True)\n"
+    "# data.replace('<Other>', np.nan, inplace=True)\n"
    ]
   },
   {
